<resources>
    <string name="app_name">Sidert Móvil</string>
    <string name="app_version">2.6.30</string>
    <string name="vol_solicitud">Vol.2020</string>
    <string name="default_asesor"></string>
    <string name="default_mac"></string>
    <string name="api_url">https://126c-187-188-168-167.ngrok-free.app/</string>
    <string name="api_user">androidapp</string>
    <string name="api_password">m1*cR0w4V3-s</string>
    <string name="google_maps_key">AIzaSyDCoUCp1xuuyNTjYCZvqL6A8oBlSOo2B2A</string>
    <string name="orders">Fichas</string>
    <string name="messages">Mensajes</string>
    <string name="map">Mapa</string>
    <string name="settings">Ajustes</string>
    <string name="complaint">Denuncias Sidert</string>
    <string name="help">Ayuda</string>
    <string name="about">Acerca de</string>
    <string name="geolocalizacion">Geolocalización</string>
    <string name="calculadora">Calculadora</string>
    <string name="cliente">Cliente</string>
    <string name="negocio">Negocio</string>
    <string name="aval">Aval</string>
    <string name="presidente">Presidente</string>
    <string name="tesorera">Tesorera</string>
    <string name="secretaria">Secretaria</string>
    <string name="integrante">Integrante</string>
    <string name="filtros">Filtros</string>
    <string name="synchronized_db">Sincronizar BD</string>
    <string name="see_log_print">Historial de impresiones</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="pendings">Pendientes</string>
    <string name="cartera">Cartera</string>
    <string name="route">Ruta</string>
    <string name="answers">Contestadas</string>
    <string name="ind_recovery">Recuperación \n Individual</string>
    <string name="ind_management">Gestión de \n Recuperación</string>
    <string name="payment_log">Bitácora de pagos \n del cliente</string>
    <string name="financial_info">Información \n Financiera</string>
    <string name="loan_number">Número de préstamo</string>
    <string name="credit_date_granted">Fecha de Crédito otorgado</string>
    <string name="client_number">Número de cliente</string>
    <string name="client_name">Nombre del cliente</string>
    <string name="call_client_at_home">Llamar al cliente a su domicilio</string>
    <string name="call">LLAMAR</string>
    <string name="call_client_at_cellphone">Llamar al cliente a su celular</string>
    <string name="loan_amount_granted">Monto del préstamo otorgado</string>
    <string name="total_loan_amount">Monto total del préstamo</string>
    <string name="amortization_number">Número de amortización</string>
    <string name="amount_payment_required">Monto del pago requerido</string>
    <string name="amortization_amount">Monto de amortización</string>
    <string name="established_payment_date">Fecha de pago establecida</string>
    <string name="endorsement_data">Datos del aval</string>
    <string name="fullname_endorsement">Nombre completo del aval</string>
    <string name="kinship_with_endorsement">Parentesco con el aval</string>
    <string name="call_endorsement_phone">Llamar al teléfono del aval</string>
    <string name="recovery_date">Fecha de recuperación</string>
    <string name="payment_recovery_location">Ubicación de Recuperación de Pago</string>
    <string name="contacted_client">¿Contactó al cliente?</string>
    <string name="yes">Si</string>
    <string name="not">No</string>
    <string name="no_cuenta_bateria">No cuenta con bateria</string>
    <string name="aclaracion">Aclaración</string>
    <string name="management_result">Resultado de la gestión</string>
    <string name="actualizar_telefono">¿Actualizar teléfono del cliente?</string>
    <string name="nuevo_telefono">Nuevo teléfono</string>
    <string name="payment">Pagó</string>
    <string name="not_pay">No pago</string>
    <string name="payment_method">Medio de pago</string>
    <string name="bank">Banco</string>
    <string name="fecha">Fecha</string>
    <string name="pago">Pago</string>
    <string name="oxxo">Oxxo</string>
    <string name="cash">Efectivo</string>
    <string name="sidert">SIDERT</string>
    <string name="balance_cutting">Saldo al corte</string>
    <string name="current_balance">Saldo actual</string>
    <string name="amount_required_paid">¿Se pagará el monto requerido?</string>
    <string name="legend_amount_correct">¿El monto es el correcto? (si está correcto, debe de seleccionar Si para seguir con el proceso, de no hacerlo no le permitirá seguir ni guardar la gestión)</string>
    <string name="selected_option">Seleccione una opción</string>
    <string name="pay_status">Estatus del pago</string>
    <string name="amount_payment_made">Monto del pago realizado</string>
    <string name="legend_amount_made">¿El monto es el correcto? (si está correcto, debe)</string>
    <string name="resumen_pago">Resumen de Pago</string>
    <string name="deposit_date">Fecha de depósito</string>
    <string name="selected_date">Seleccionar fecha</string>
    <string name="question_photo_gallery">¿Tomará fotografía o adjuntará desde galería?</string>
    <string name="photo_gallery">Fotografía o Galería?</string>
    <string name="attach_ticket">Adjuntar ticket</string>
    <string name="photo_voucher">Fotografía del comprobante de pago</string>
    <string name="is_manager">¿Está el gerente con usted?</string>
    <string name="imprimir_recibos">¿Imprimir recibos?</string>
    <string name="payment_receipt_number">Número de recibo de pago</string>
    <string name="doesnt_battery">No cuenta con batería</string>
    <string name="receipt_printing">Impresión de recibo</string>
    <string name="comentario">Comentario</string>
    <string name="facade_photo">Fotografía de fachada</string>
    <string name="order">Orden</string>
    <string name="expedientes">Expedientes</string>
    <string name="fotografia">Fotografía</string>
    <string name="galeria">Galería</string>
    <string name="preview">VISTA PREVIA</string>
    <string name="reason_no_payment">Motivo de no pago</string>
    <string-array name="motivo_no_contacto">
        <item>CLIENTE FUGADO</item>
        <item>ILOCALIZABLE</item>
        <item>OTRO</item>
    </string-array>
    <string name="reason_death">Motivo de defunción</string>
    <string name="date_death">Fecha de defunción</string>
    <string name="motivo_aclaracion">Motivo de Aclaración</string>
    <string name="specify_cause">Especifica la causa</string>
    <string name="signature_manager">Firma Gerente</string>
    <string name="group_name">Nombre del Grupo</string>
    <string name="group_key">Clave del Grupo</string>
    <string name="total_members">Total de integrantes</string>
    <string name="total_amount_group_loan">Monto total del préstamo grupal</string>
    <string name="treasurer_data">Datos de la tesorera</string>
    <string name="treasurer_name">Nombre de la tesorera</string>
    <string name="call_treasurer_phone">Llamar al teléfono de la tesorera</string>
    <string name="president_data">Datos de la presidenta</string>
    <string name="president_name">Nombre de la presidenta</string>
    <string name="call_president_phone">Llamar al teléfono de la presidenta</string>
    <string name="receptionist_data">Datos de la secretaria</string>
    <string name="receptionist_name">Nombre de la secretaria</string>
    <string name="call_receptionist_phone">Llamar al teléfono de la secretaria</string>
    <string name="solidary_payment">¿Se hizo pago solidario?</string>
    <string name="resumen_info">Resumen</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="connect">Conectar</string>
    <string name="open_pay">OpenPay</string>
    <string name="members_group">Integrantes del Grupo</string>
    <string name="member">Integrantes</string>
    <string name="amount_payment_promise">Monto promesa de pago</string>
    <string name="payment_promise_date">Fecha de promesa de pago</string>
    <string name="treasurer_address">Dirección de la tesorera</string>
    <string name="president_address">Dirección de la presidenta</string>
    <string name="receptionist_address">Dirección de la secretaria</string>
    <string name="update_phone">¿Actualizar teléfono?</string>
    <string name="new_phone">Nuevo teléfono de contacto</string>
    <string name="phone">Teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="department">Departamento</string>
    <string name="monto_correcto">¿El monto es el correcto?</string>
    <string name="data_person">Datos personales</string>
    <string name="name">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="estatus_pago">Estatus del Pago</string>
    <string name="folio_recibo">Número de recibo de pago</string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="no">No</string>
    <string name="clear">Limpiar</string>
    <string name="reason">Motivo</string>
    <string name="subject">Asunto</string>
    <string name="nombre_denunciado">Nombre del Denunciado</string>
    <string-array name="puesto">
        <item>Seleccione una opción</item>
        <item>ADMINISTRADORA DE SUCURSAL</item>
        <item>ANALISTA FUNCIONAL DE TI</item>
        <item>ASESOR DE CREDITO</item>
        <item>AUDITOR DE CAMPO</item>
        <item>AUXILIAR ADMINISTRATIVO</item>
        <item>AUXILIAR CONTABLE</item>
        <item>AUXILIAR DE ARCHIVO</item>
        <item>AUXILIAR DE RECURSOS HUMANOS</item>
        <item>AUXILIAR DE TESORERIA</item>
        <item>CAPTURISTA</item>
        <item>CONTROL DE CALIDAD</item>
        <item>COORDINADOR DE MESA DE CONTROL PUEBLA</item>
        <item>COORDINADOR DE MESA DE CONTROL VERACRUZ</item>
        <item>COORDINADOR DE SUCURSAL</item>
        <item>DIRECCION DE CARTERA VENCIDA</item>
        <item>DIRECTOR DE INNOVACION</item>
        <item>DIRECTORA GENERAL</item>
        <item>ENCARGADO DE ARCHIVO</item>
        <item>GERENTE ADMINISTRATIVO</item>
        <item>GERENTE DE CARTERA VENCIDA VERACRUZ</item>
        <item>GERENTE DE SUCURSAL</item>
        <item>GERENTE DE ZONA</item>
        <item>GERENTE REGIONAL VERACRUZ</item>
        <item>GESTOR DE COBRANZA</item>
        <item>INTENDENCIA</item>
        <item>JEFE DE AUDITORIA</item>
        <item>JEFE DE CONTABILIDAD</item>
        <item>JEFE DE TESORERIA</item>
        <item>LIDER TECNOLOGIAS DE INFORMACION</item>
        <item>OFICIAL DE CUMPLIMIENTO</item>
        <item>PROGRAMADOR</item>
        <item>RECEPCIONISTA</item>
        <item>TELECOMUNICACIONES</item>
    </string-array>
    <string name="resumen_int">Resumen de Integrantes</string>
    <string name="sent">Enviar</string>
    <string name="confirmar">Confirmar</string>
    <string name="limpiar">Limpiar</string>
    <string name="tabla_pagos">Tabla de Pagos</string>
    <string name="reporte_omega">Reporte de Omega</string>
    <string name="print_title">Imprimir Recibos</string>
    <string name="leyend_complaint">Su denuncia será completamente anónima.</string>
    <string name="client_signature">Firma Cliente:</string>
    <string name="manager_signature">Firma Gestor:</string>
    <string name="treasurer_signature">Firma Tesorera:</string>
    <string name="asessor_signature">Firma Asesor:</string>
    <string name="name_signature">Nombre y Firma de Tesorera</string>
    <string name="loan_amount">Monto del Préstamo</string>
    <string name="group_number">Número de Grupo</string>
    <string name="nombre_cliente">Nombre del Cliente</string>
    <string name="nombre_negocio">Nombre del Negocio</string>
    <string name="nombre_aval">Nombre del Aval</string>
</resources>