<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <group android:checkableBehavior="single" android:id="@+id/group1">
            <item
                android:id="@+id/NVorders"
                android:title="@string/orders"
                android:icon="@drawable/item_orders" />
        </group>

        <group android:checkableBehavior="single" android:id="@+id/group2">
            <item
                android:id="@+id/NVmessages"
                android:title="@string/messages"
                android:icon="@drawable/item_messages"/>
        </group>

        <group android:checkableBehavior="single" android:id="@+id/group3">
            <item
                android:id="@+id/NVmap"
                android:title="@string/map"
                android:icon="@drawable/item_map"/>
        </group>

        <group android:checkableBehavior="single" android:id="@+id/group4">
            <item
                android:id="@+id/NVsettings"
                android:title="@string/settings"
                android:icon="@drawable/item_settings"/>
        </group>

        <group android:checkableBehavior="single" android:id="@+id/group5">
            <item
                android:id="@+id/NVcomplaint"
                android:title="@string/complaint"
                android:icon="@drawable/ic_mailbox_white"/>
        </group>

        <group android:checkableBehavior="single" android:id="@+id/group6">
            <item
                android:id="@+id/NVhelp"
                android:title="@string/help"
                android:icon="@drawable/item_help"/>
        </group>

        <group android:checkableBehavior="single" android:id="@+id/group7">
            <item
                android:id="@+id/NVabout"
                android:title="@string/about"
                android:icon="@drawable/item_about"/>
        </group>

    </group>

</menu>