<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--  ID external order -->
    <TextView
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:background="@color/shadowdrawer"
        android:gravity="center"
        android:text="201904233485739-L007ri"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--  Número de préstamo  -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/loan_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:text="338475"
                    android:editable="false"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Fecha de crédito otorgado  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/credit_date_granted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:text="04/04/2019"
                    android:editable="false"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Número de cliente  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/client_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:text="45930"
                    android:editable="false"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Nombre del cliente  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/client_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:editable="false"
                    android:text="ALEJANDRO ISAIAS LOPEZ JIMENEZ"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Llamer al cliente a su domicilio  -->
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/call_client_at_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnCallHome"
                    android:drawableRight="@drawable/ic_call"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/btn_rounded_blue"
                    android:text="@string/call"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Llamer al cliente a su celular  -->
            <LinearLayout
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/call_client_at_cellphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnCallCell"
                    android:drawableRight="@drawable/ic_call"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/btn_rounded_blue"
                    android:text="@string/call"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Monto del préstamo otorgado  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/loan_amount_granted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:editable="false"
                    android:text="$ 5,000.00"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Monto total del préstamo  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/total_loan_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:editable="false"
                    android:text="$ 6,340.34"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Número de amortización  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/amortization_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:editable="false"
                    android:text="4"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Monto del pago requerido  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/amount_payment_required"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:text="$ 356.23"
                    android:editable="false"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Monto de amortización  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/amortization_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:text="$ 204.45"
                    android:editable="false"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Fecha de pago establecida  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/established_payment_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:text="06/04/2019"
                    android:editable="false"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Datos del aval  -->
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/textsize"
                    android:textColor="@android:color/black"
                    android:text="@string/endorsement_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:background="@color/blue_sidert"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>

            <!--  Nombre completo del aval  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/fullname_endorsement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:text="ARTURO LOPEZ JIMENEZ"
                    android:editable="false"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Parentesco con el aval  -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/blue_sidert"
                    android:text="@string/kinship_with_endorsement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:text="HERMANO"
                    android:editable="false"
                    android:paddingLeft="10dp"
                    android:background="@drawable/et_rounded_edges"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

            <!--  Llamer al teléfono del aval  -->
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/call_endorsement_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnCallEndorsement"
                    android:drawableRight="@drawable/ic_call"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/btn_rounded_blue"
                    android:text="@string/call"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_height" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>